--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# .gitignore
+
+# Ignore environment variables file
 .env
+
+# Python bytecode
 __pycache__/
 *.pyc
+
+# Virtual environment
+venv/
