--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 
 TELEGRAM_API_TOKEN=8032363335:AAGszY5mrXZDnmTHNlBcYA_mfJyWcPG_RU4
 HF_TOKEN=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
-DATABASE_URL=postgresql://postgres:eMSGPchWFqiQDKRpaXjiNRqpLVaCGZNN@postgres.railway.internal:5432/railway
+DATABASE_URL=postgresql://postgres:eMSGPchWFqiQDKRpaXjiNRqpLVaCGZNN@shortline.proxy.rlwy.net:53799/railway
